--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,57 @@
     box-sizing: border-box;
 }
 
-h1 {
-    color: blue;
+:root {
+    --sf-bg: #1d2d3c;
+    --sf-card: #112030;
+    --sf-header: #06131f;
+    --sf-icon: #18d65f;
+    --sf-light: #FFFFFF;
+}
+
+body {
+    background-color: var(--sf-bg);
+}
+
+.header {
+    background-color: var(--sf-header);
+    height: 100px;
+}
+
+.container_card {
+    width: 80%;
+    margin: auto;
+}
+
+.row_card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 1rem;
+}
+
+.card {
+    display: flex;
+    background-color: var(--sf-card);
+    width: 360px;
+    height: 400px;
+    margin: 1rem;
+
+}
+
+.card_img {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.card_img img {
+    display: flex;
+    justify-content: center;
+    width: 150px;
+    aspect-ratio: 1/1;
+}
+
+.card_text {
+    color: var(--sf-light);
 }
