--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,17 @@ body {
     height: 100px;
 }
 
+.header img {
+    width: 50px;
+    aspect-ratio: 1/1;
+    margin: 1.5rem;
+    /* background-color:var(--sf-icon); */
+    filter: brightness(0) saturate(100%) invert(11%) sepia(100%) saturate(7174%)
+    hue-rotate(13deg) brightness(104%) contrast(118%);
+}
+
+
+
 .container_card {
     width: 80%;
     margin: auto;
@@ -51,7 +62,7 @@ body {
 .card_img img {
     display: flex;
     justify-content: center;
-    width: 150px;
+    width: 180px;
     aspect-ratio: 1/1;
 }
 
