--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,6 @@ body {
 
 .header {
     background-color: var(--sf-header);
-    height: 100px;
 }
 
 .header img {
@@ -27,8 +26,6 @@ body {
     margin: 1.5rem;
     filter: brightness(0) saturate(100%) invert(11%) sepia(100%) saturate(7174%) hue-rotate(106deg) brightness(104%) contrast(118%);
 }
-
-
 
 .container_card {
     width: 80%;
@@ -45,16 +42,15 @@ body {
 .card {
     display: flex;
     background-color: var(--sf-card);
-    width: 360px;
-    height: 400px;
-    margin: 1rem;
-
+    width: 340px;
+    margin: 1.5rem;
+    cursor: pointer;
 }
 
 .card_img {
     display: flex;
     justify-content: center;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .card_img img {
@@ -66,4 +62,19 @@ body {
 
 .card_text {
     color: var(--sf-light);
+}
+
+button {
+    color: var(--sf-light);
+}
+
+.disco_detail {
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(51, 64, 75, 0.9);
+    width: 90vW;
+    height: 90vh;
 }
